--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
     "hi-bump": "^1.1.1",
+    "hire-tabs": "^1.2.0",
+    "jsx-to-string": "^0.2.4",
+    "pretty": "^1.0.0",
+    "prismjs": "^1.3.0",
     "watchify": "^3.2.2"
   },
   "dependencies": {
