--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "hire-forms-input": "^1.0.1",
-    "hire-forms-prop-types": "^2.0.1",
+    "hire-forms-input": "https://github.com/Hire-Forms/hire-forms-input.git#react-0.14",
+    "hire-forms-prop-types": "https://github.com/Hire-Forms/hire-forms-prop-types.git#react-0.14",
     "hire-forms-utils": "^1.2.0"
   }
 }
