--- a/package.json
+++ b/package.json
@@ -20,29 +20,33 @@
   },
   "homepage": "https://github.com/Hire-Forms/hire-forms-list",
   "peerDependencies": {
-    "classnames": "^2.1.2",
+    "classnames": "^2.2.5",
     "react": "^15.0.1"
   },
   "devDependencies": {
-    "babel-core": "^5.5.8",
-    "babel-eslint": "^3.1.15",
-    "babel-plugin-object-assign": "^1.1.0",
-    "babelify": "^6.1.2",
-    "brfs": "^1.4.1",
-    "browser-sync": "^2.10.0",
-    "browserify": "^10.2.4",
-    "derequire": "^2.0.0",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "brfs": "^1.4.3",
+    "browser-sync": "^2.13.0",
+    "browserify": "^13.0.1",
+    "derequire": "^2.0.3",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-react": "^5.1.1",
     "hi-bump": "^1.1.1",
-    "hire-tabs": "^1.2.0",
-    "jsx-to-string": "^0.2.4",
+    "hire-tabs": "^2.0.2",
+    "jsx-to-string": "^0.2.11",
     "pretty": "^1.0.0",
-    "prismjs": "^1.3.0",
-    "watchify": "^3.2.2"
+    "prismjs": "^1.5.1",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
-    "classnames": "^2.1.2",
+    "classnames": "^2.2.5",
     "hire-forms-input": "^2.0.0",
     "hire-forms-prop-types": "^2.0.1",
     "hire-forms-utils": "^1.2.0",
