--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "start": "scripts/watch.sh",
-    "examples": "browser-sync start --server --files \"examples/*.js, examples/*.html, examples/*.css\" --startPath examples",
-    "watch-examples": "scripts/watch-examples.sh",
-    "bump": "hi-bump"
+    "bump": "hi-bump",
+    "start": "tsc",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -19,37 +18,16 @@
     "url": "https://github.com/Hire-Forms/hire-forms-list/issues"
   },
   "homepage": "https://github.com/Hire-Forms/hire-forms-list",
-  "peerDependencies": {
-    "classnames": "^2.2.5",
-    "react": "^15.0.1"
-  },
   "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.3.0",
-    "brfs": "^1.4.3",
-    "browser-sync": "^2.13.0",
-    "browserify": "^13.0.1",
-    "derequire": "^2.0.3",
-    "eslint": "^2.11.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
+    "@types/react": "^15.0.13",
     "hi-bump": "^1.1.1",
-    "hire-tabs": "^2.0.2",
-    "jsx-to-string": "^0.2.11",
-    "pretty": "^1.0.0",
-    "prismjs": "^1.5.1",
-    "watchify": "^3.7.0"
+    "typescript": "^2.2.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "hire-forms-input": "^2.0.0",
     "hire-forms-prop-types": "^2.0.1",
     "hire-forms-utils": "^1.2.0",
-    "insert-css": "^0.2.0"
+    "react": "^15.4.2"
   }
 }
